--- a/css/style.css
+++ b/css/style.css
@@ -1542,10 +1542,11 @@ our team {
 }
 
 .coming-soon-text {
-  font-size: 20rem; /* Increase size */
+ font-size: 160px; /* Equivalent to 10rem if base is 16px */
   font-weight: bold;
   margin-top: 20px;
+  line-height: 1;
+  text-align: center;
 }
-
 
 
